# dkp-automator

./: .env.example  .gitignore  Cargo.toml  boss_aliases.json  boss_renames.json  name_aliases.json  points.json  prios.json
src/: autocorrect.rs  main.rs  points.rs  sanitise.rs  sheets.rs
