[package]
name = "dkp-automator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
google-sheets4 = "*"
hyper = "^0.14"
hyper-rustls = "^0.22"
lazy_static = "1.4.0"
once_cell = "1.19.0"
regex = "1.10.4"
serde = "^1.0"
serde_json = "^1.0"
textdistance = "1.0.2"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
yup-oauth2 = "^5.0"
